src/test/ui/existential_types/generic_duplicate_param_use.stderr
error[E0091]: type parameter `U` is unused
  --> $DIR/generic_duplicate_param_use.rs:5:25
   |
LL | existential type Two<T, U>: 'static; //~ ERROR type parameter `U` is unused
   |                         ^ unused type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0091`.
